# ProcertLibrary

./: .gitignore  Standard -EN.xlsx  Standard -IEC.xlsx  constant.py  example.html  main.py  pyproject.toml  test.html  utils.py
docs/: log.md
scripts/: convert_to_excel.py  convert_to_procert.py  data-generator.sh  output_parser.py
