[project]
name = "procertlibrary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "jsonlines>=4.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.51.0",
    "tenacity>=9.1.2",
    "tqdm>=4.67.1",
]
